packages/wasm/ballerina-lang-go/parser/testdata/tokens/javainterop/negative/project_no_class_def_found/main.token
(import 6 0x00 ())
(ident, "ballerina" 9 0x00 ())
(/ 1 0x00 ())
(ident, "jballerina" 10 0x00 ())
(. 1 0x00 ())
(ident, "java" 4 0x00 ())
(; 1 0x00 ())
(function 8 0x00 ())
(ident, "testClassDefNotFound" 20 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(handle 6 0x00 ())
(= 1 0x00 ())
(@ 1 0x00 ())
(ident, "java" 4 0x00 ())
(: 1 0x00 ())
(ident, "Method" 6 0x00 ())
({ 1 0x00 ())
(ident, "name" 4 0x00 ())
(: 1 0x00 ())
(string, ""foo"" 5 0x00 ())
(, 1 0x00 ())
(ident, "'class" 6 0x00 ())
(: 1 0x00 ())
(string, ""javalibs.app.App"" 18 0x00 ())
(} 1 0x00 ())
(external 8 0x00 ())
(; 1 0x00 ())
(2 0 0x00 ())
